Partial fixes for presentation

--- a/GC_TLA/ics_23_configs.ini
+++ b/GC_TLA/ics_23_configs.ini
@@ -90,6 +90,8 @@ inherit = ['INHERIT_SPEEDUP_PLOTS']
 minmax = False
 stddev = False
 fig_pts = 400
+exclude_budget = True
+format = 'png'
 # (506.295 / 4)
 
 [EVALUATION]
