Config updates for cleanliness/testing

--- a/GC_TLA/minimal_test_configs.ini
+++ b/GC_TLA/minimal_test_configs.ini
@@ -1,42 +1,42 @@
 [INHERIT_BASE]
-sizes = ['S', 'SM', 'M', 'ML', 'L', 'XL']
+sizes = ['S', 'SM', 'M']
 
 [INHERIT_EXPERIMENT]
 inherit = ['INHERIT_BASE']
-seeds = [1234, 2022, 9999]
+seeds = [1234]
 backup = ['Data/']
-targets = ['SM', 'ML', 'XL']
-evals = 30
-expect = 31
+targets = ['SM']
+evals = 3
+expect = 4
 priority = 1
 
 [INHERIT_BO]
 inherit = ['INHERIT_EXPERIMENT']
 kappa = 1.96
 learner = 'RF'
-NI = 10
+NI = 2
 acqfn = 'gp_hedge'
 evaluator = 'ray'
 
 [INHERIT_XFER]
 inherit = ['INHERIT_EXPERIMENT']
-inputs = ['S', 'M', 'L']
+inputs = ['S', 'M']
 top = 0.3
-models = ['GaussianCopula'] # ['CTGAN', 'TVAE', 'GaussianCopula']
+models = ['GaussianCopula']
 problem_prefix = 'problem'
 priority = 2
 
 [BO]
 inherit = ['INHERIT_BO']
-evals = 200
-expect = 201
+evals = 5
+expect = 6
 offline_seed = 2468
 
 [BO_FEWSHOT]
 inherit = ['INHERIT_BO']
 backup = ['Data/']
-evals = 30
-expect = 31
+evals = 3
+expect = 4
 
 [O3]
 inherit = ['INHERIT_EXPERIMENT']
@@ -47,7 +47,7 @@ inherit = ['INHERIT_XFER']
 
 [INFERENCE]
 inherit = ['INHERIT_XFER']
-targets = ['XL']
+targets = ['SM']
 seeds = [1234]
 evals = 1000
 expect = 1001
@@ -63,12 +63,12 @@ seeds = [1234]
 
 [GPTUNE_SLA]
 inherit = ['INHERIT_EXPERIMENT']
-inputs = ['s', 'm', 'l']
+inputs = ['s', 'm']
 priority = 2
 
 [GPTUNE_DTLA]
 inherit = ['INHERIT_EXPERIMENT']
-inputs = ['s', 'm', 'l']
+inputs = ['s', 'm']
 priority = 2
 
 [INHERIT_PLOTS]
@@ -122,8 +122,8 @@ require_sizes = False
 
 [BIAS_CHECK]
 require_sizes = False
-inputs = ['S','M','L']
-targets = ['SM','ML','XL']
+inputs = ['S','M']
+targets = ['SM']
 ideal = 0.1
 bad = 0.05
 success = 0.95
@@ -142,7 +142,7 @@ FINAL_SINGLETON = 0
 
 [KL_DIVERGENCE]
 require_sizes = False
-suffixes = ['SM', 'XL']
+suffixes = ['SM']
 exhaust = 'Data/oracle/all_'
 sample = ['Data/results_rf_*']
 save_name = "KLDIV_"
