Reduce testing scope, fix templating for rejection

--- a/GC_TLA/minimal_test_configs.ini
+++ b/GC_TLA/minimal_test_configs.ini
@@ -58,7 +58,7 @@ refits = 0
 inherit = ['INHERIT_XFER']
 evals = 1000
 expect = 1
-models = ['GaussianCopula', 'TVAE', 'CTGAN', 'random', 'CopulaGAN']
+models = ['GaussianCopula', 'random']
 seeds = [1234]
 
 [GPTUNE_SLA]
