Verify table tasks and collation; include table data as exemplar

--- a/GC_TLA/ics_23_configs.ini
+++ b/GC_TLA/ics_23_configs.ini
@@ -75,7 +75,7 @@ priority = 2
 inherit = ['INHERIT_BASE']
 show = False
 use_backup = True
-backup = ['data']
+backup = ['Data']
 targets = ['SM', 'ML', 'XL']
 priority = 0
 
