--- a/GC_TLA/minimal_test_configs.ini
+++ b/GC_TLA/minimal_test_configs.ini
@@ -75,7 +75,7 @@ priority = 2
 inherit = ['INHERIT_BASE']
 show = False
 use_backup = True
-backup = ['data']
+backup = ['Data']
 targets = ['SM', 'ML', 'XL']
 priority = 0
 
