Validate kl divergence

--- a/GC_TLA/ics_23_configs.ini
+++ b/GC_TLA/ics_23_configs.ini
@@ -142,7 +142,7 @@ FINAL_SINGLETON = 0
 require_sizes = False
 suffixes = ['SM', 'XL']
 exhaust = 'Data/oracle/all_'
-sample = ['Data/results_rf_*']
+sample = ['Data/ytopt_bo_source_tasks/*']
 save_name = "KLDIV_"
 #version = 1
 #x_ratio = [1-(0.05*x) for x in range(20)]
